# catchment-poc

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  filter_determinands.py  generate_map.py  link_data.py  location_linking.py  merge_observational_data.py  pyproject.toml  requirements.txt  shape_observational_data.py
analysis/: conflicts.csv  month_analysis.csv  test.csv
app/: TODO.md  app.js  catchment.geojson  config.js  corfe-river-wastewater.html  docs.css  docs.html  docs.js  index.html  points.css  points.html  points.js  sac.geojson  server.py  spa.geojson  sparql.css  sparql.html  sssi.geojson  style.css
audit/: README.md  findings.md
audit/working/: 01-ontology-conformance.md  02-readme-claims.md  03-points-apart.md  04-graph-vs-source.md  05-dataset-readmes.md  06-code-and-runtime.md
first_attempt_location_based_matching/: filter_determinands.py  location_linking.py
first_attempt_location_based_matching/analysis/: discharge_ngr_to_permit+version.csv
legacy/: README.md
map_notebook/: OC_3367.geojson
ontop/: duckdb-breaches.properties  duckdb-regulation.properties  duckdb-winep.properties  duckdb.properties  output.ttl
output_data/: map.html  test.csv  test1.csv
output_data/filter_determinands/: filtered_determinands.csv  filtered_determinands_long.csv
output_data/location_linking/: sampling_point_to_permit_all.csv  sampling_point_to_permit_filtered.csv
output_data/shape_observational_data/: observation-evaluation.csv  observation_evaluation.csv
raw_datasets/: SFI Option details.xlsx  Scheme details.xlsx  Special_Areas_of_Conservation_England.geojson  designation_types.ttl  determinand_codelist.json  merge_observational_data.py  poole_harbour_rivers_observations_2026.csv  prep_designations.py
raw_datasets/access_database_csv_files/: README.md  consents_all.csv  consents_all_poole_harbour.csv  filter_consents_all.py
raw_datasets/poole_harbour_2020-2026/: observations-2026-6-22T10_47_33.csv  observations-2026-6-22T10_47_39.csv  observations-2026-6-22T10_47_49.csv
raw_datasets/poole_harbour_rivers_water_quality_observations_2020_2026/: observations-2026-6-22T10_47_21.csv  observations-2026-6-22T10_47_44.csv
second_attempt/: effluents_filtered.csv  generate_map.py  map.html  sampling_point_to_permit_relationship_mapping_columns_only.csv  test.csv  test.py
ttl/: breaches.ttl  catchment.ttl  designations.ttl  regulation.ttl  sfi.ttl  winep.ttl
ttl/breaches/: README.md  breaches.obda  breaches_to_db.py  compliance_fetch_manifest.csv  fetch_compliance_observations.py
ttl/catchment/: ISSUES.md  PLAN.md  README.md  TODO.md  catchment_construct.py  sparql_client.py  validate_csv_claims.py  (+1 more)
(+31 files in other folders)
