[project]
name = "demonstrator-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10.11"
"package-mode" =  false
dependencies = [
    "branca (==0.8.2)",
    "certifi (==2026.6.17)",
    "charset-normalizer (==3.4.7)",
    "folium (==0.20.0)",
    "geopandas (==1.1.4)",
    "idna (==3.18)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "numpy (==2.2.6)",
    "packaging (==26.2)",
    "pandas (==2.3.3)",
    "pyogrio (==0.13.0)",
    "pyproj (==3.7.1)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2026.2)",
    "requests (==2.34.2)",
    "shapely (==2.1.2)",
    "six (==1.17.0)",
    "tzdata (==2026.2)",
    "urllib3 (==2.7.0)",
    "xyzservices (==2026.3.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
