[project]
name = "catchment-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10.11"
"package-mode" =  false
dependencies = [
    "branca (==0.8.2)",
    "certifi (==2026.6.17)",
    "charset-normalizer (==3.4.7)",
    "geopandas (==1.1.4)",
    "idna (==3.18)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "numpy (==2.2.6)",
    "packaging (==26.2)",
    "pandas (==2.3.3)",
    "pyogrio (==0.13.0)",
    "pyproj (==3.7.1)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2026.2)",
    "requests (==2.34.2)",
    "shapely (==2.1.2)",
    "six (==1.17.0)",
    "tzdata (==2026.2)",
    "urllib3 (==2.7.0)",
    "xyzservices (==2026.3.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "duckdb (>=1.5.4,<2.0.0)",
    "pdfplumber (>=0.11.10,<0.12.0)",
    "rdflib (>=7.6.0,<8.0.0)",
    "pyoxigraph (>=0.5.0,<0.6.0)"
]


[tool.poetry.group.dev.dependencies]
# Browser-driving for verifying the app/ pages end-to-end (e.g. app/points.html) against a running
# `python app/server.py`. Selenium waits on the page's SPARQL fetch resolving, which a plain
# `firefox --screenshot` races -- it captures "Loading the store..." and silently looks like a bug.
# Drive FIREFOX only; this project does not use Chrome/Chromium. selenium-manager fetches geckodriver.
# Not needed to build or run the demonstrator, so it lives in the dev group (installed by default;
# skip it with `poetry install --without dev`).
selenium = ">=4.46.0,<5.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
